# alpha-evolve-write

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.claude/agents/: code-reviewer.md  codebase-explainer.md
src/alpha_evolve_essay/: __init__.py
src/alpha_evolve_essay/config/: __init__.py  config_manager.py
src/alpha_evolve_essay/models/: __init__.py  essay.py  essay_pool.py  evaluation_result.py  generation_config.py
src/alpha_evolve_essay/pipeline/: __init__.py  essay_evaluator.py  essay_generator.py  evolutionary_pipeline.py
src/alpha_evolve_essay/services/: __init__.py  llm_service.py
tests/: __init__.py  conftest.py  test_main.py
tests/config/: test_config_manager.py
tests/evaluation/: __init__.py
tests/mcp_server/: __init__.py
tests/models/: __init__.py  test_essay.py  test_essay_pool.py  test_evaluation_result.py  test_generation_config.py
tests/pipeline/: __init__.py  test_essay_evaluator.py  test_essay_generator.py  test_evolutionary_pipeline.py
tests/services/: __init__.py  test_llm_service.py
